# vanitas

./: .gitignore  CMakeLists.txt  README.md
src/: args_parser.cpp  block_builder.cpp  classifier.cpp  config.cpp  main.cpp  normalizer.cpp  profile.cpp  profile_manager.cpp
src/cli/: CMakeLists.txt  app.cpp  app.hpp
src/cli/commands/: analyze_stream.cpp  file.cpp  help.cpp  pipe.cpp  profile.cpp  run.cpp
src/cli/commands/include/: analyze_stream.hpp  command.hpp  file.hpp  help.hpp  pipe.hpp  profile.hpp  run.hpp
src/include/vanitas/: args_parser.hpp  block_builder.hpp  classifier.hpp  config.hpp  normalizer.hpp  profile.hpp  profile_manager.hpp
tests/: example.txt  log
